--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
   text-align: center;
 }
 
+.header {
+  height: 70px;
+  background: red;
+  padding: 15px;
+  margin-bottom: 15px;
+  color: white;
+  box-shadow: 2px 5px 5px gray;
+}
+
+.header h1 {
+  text-shadow: 2px 5px 5px gray;
+}
+
 nav a {
   margin: 0 15px;
 }
@@ -17,4 +30,22 @@ a:link, a:visited, a:hover, a:active {
 
 a:hover {
   opacity: 1;
+}
+
+.main {
+  min-height: 76.6vh;
+}
+
+.footer {
+  background: red;
+  color: white;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.footer h3 {
+  text-shadow: 2px 5px 5px gray;
 }
