--- a/src/components/Favorites.css
+++ b/src/components/Favorites.css
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: space-around;
   flex: 1 1 auto;
-  min-width: 25%;
-  margin: 10px 10px;
+  max-width: 25%;
+  margin: 10px auto;
   border: 1px gray solid;
   border-radius: 10px;
 }
